--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apollo",
+  "name": "apollo-server",
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
@@ -9,9 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browserify": "^11.2.0",
     "browser-sync": "^2.5.3",
+    "browserify": "^11.2.0",
     "express": "^4.13.3",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
     "socket.io-client": "^1.3.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
