--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
-    "socket.io-client": "^1.3.6",
+    "socket.io-client": "^1.3.6"
   },
   "devDependencies": {
     "browser-sync": "^2.5.3",
